--- a/fisco-drug-trace-ui/package.json
+++ b/fisco-drug-trace-ui/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@metamask/detect-provider": "^2.0.0",
+    "ali-oss": "^6.20.0",
+    "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.4.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "axios": "^1.6.8",
     "vue-router": "^4.2.5",
     "web3": "^4.3.0"
   },
