feat: 修改表格列属性

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "wuhaohao <1611499758@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "multer": "1.4.5-lts.1"
   }
 }
